lbwreg/django-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: lbwreg-frontend
  labels:
    app: lbwreg
spec:
  replicas: 1
  selector:
    matchLabels:
      app: lbwreg
      tier: django
  strategy: 
    type: Recreate
  template:
    metadata:
      labels:
        k8s-app: lbwreg-frontend
        app: lbwreg
        tier: django
    spec:
      containers:
      - image: lbedford/lbwreg-django
        name: django-container
        ports:
          - containerPort: 80
            name: web
        volumeMounts:
          - mountPath: "/var/www/content"
            name: content
      volumes:
        - name: content
          persistentVolumeClaim:
            claimName: lbwreg-content
