lbwreg/lbwreg-content.yaml
apiVersion: apps/v1beta2
kind: Deployment
metadata:
  name: lbwreg-content
  labels:
    k8s-app: lbwreg-content
    app: lbwreg
    tier: static
spec:
  selector:
    matchLabels:
      k8s-app: lbwreg-content
  template:
    metadata:
      labels:
        k8s-app: lbwreg-content
        app: lbwreg
        tier: static
    spec:
      containers:
      - name: nginx
        image: nginx:1
        ports:
        - name: http
          containerPort: 80
        volumeMounts:
          - mountPath: "/usr/share/nginx/html"
            name: content
      volumes:
        - name: content
          persistentVolumeClaim:
            claimName: lbwreg-content
