lbwreg/mariadb-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mariadb-deployment
  labels:
    app: lbwreg
spec:
  replicas: 1
  selector:
    matchLabels:
      app: lbwreg
      tier: mariadb
  strategy: 
    type: Recreate
  template:
    metadata:
      labels:
        app: lbwreg
        tier: mariadb
    spec:
      containers:
      - image: mariadb
        name: mariadb-container
        ports:
          - containerPort: 3306
            name: mysql
        args:
        - --character-set-server=utf8mb4 
        - --collation-server=utf8mb4_unicode_ci
        volumeMounts:
          - name: mariadb-volume-mount
            mountPath: /var/lib/mysql
      volumes:
      - name: mariadb-volume-mount
        persistentVolumeClaim:
          claimName: lbwreg-db
