lbwreg/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: lbwreg-django
spec:
  ports:
  - name: web
    port: 80
    targetPort: 9090
  selector:
    k8s-app: lbwreg-django
---
apiVersion: v1
kind: Service
metadata:
  name: lbwreg-content
spec:
  ports:
  - name: web
    port: 80
    targetPort: 80
  selector:
    k8s-app: lbwreg-content
---
apiVersion: v1
kind: Service
metadata:
  name: lbwreg-db
spec:
  ports:
  - name: mysql
    port: 3306
    targetPort: 3306
  selector:
    app: lbwreg
    tier: mariadb
