lbwreg/ingress.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: lbwreg
  annotations:
    kubernetes.io/ingress.class: "traefik"
spec:
  rules:
    - host: "reg.linuxbierwanderung.org"
      http:
        paths:
          - path: /
            backend:
              serviceName: lbwreg
              servicePort: web
    - host: "content.draiocht.net"
      http:
        paths:
          - path: /
            backend:
              serviceName: lbwreg-content
              servicePort: web
